# engineer_tool

./: CMakeLists.txt  LICENSE  auto_start.py  index.html  lv_conf.h  lv_drv_conf.h  package-lock.json  package.json  png.js  server.js  version.txt
lib/: VersionInfo.h  app.c  app.h  bambu_api.c  bambu_api.h  bambu_ftps.cpp  bambu_ftps.h  bambu_mqtt.cpp  bambu_mqtt.h  com_decode.c  com_decode.h  com_with_pwr.cpp  com_with_pwr.h  config.h  esp_now_device.h  panda_touch.h  printer_group.cpp  printer_group.h  rs_manage.c  rs_manage.h  rs_multilang.cpp  rs_multilang.h  rt_slist.h  ui.h  utils_lib.c  utils_lib.h
lib/app_ui/: lv_screen_ctrl.cpp  lv_screen_ctrl.h  lv_screen_ctrl_axis.cpp  lv_screen_ctrl_filament.cpp  lv_screen_ctrl_filament_tray.cpp  lv_screen_guide_printer_help.cpp  lv_screen_home.cpp  lv_screen_home.h  lv_screen_home_idel.cpp  lv_screen_home_printing_one.cpp  lv_screen_print.cpp  lv_screen_print.h  lv_screen_print_ftps.cpp  lv_screen_print_history.cpp  lv_screen_print_usb.cpp  lv_screen_start.cpp  lv_ui_overlay.h  lv_widget_keyboard.cpp  lv_widget_popup.cpp  lv_widget_screen.cpp  lv_widget_wifi.cpp
lib/fonts/: my_16_font.c  new_font_16.c  opensansb12.c  opensansb16.c  opensansb20.c  opensansb24.c  opensansb24_ext.c
lib/images/: gif_hello.c  ui_img_a1_ams_png.c  ui_img_a1_mini_ams_png.c  ui_img_a1_mini_png.c  ui_img_a1_png.c  ui_img_a1_series_png.c  ui_img_account_png.c  ui_img_bigger_png.c  ui_img_btt_logo_png.c  ui_img_close_png.c  ui_img_cloud_disable.c  ui_img_cloud_enable.c  ui_img_countdown_png.c  ui_img_ctl_ctl_png.c  ui_img_ctl_home_png.c  ui_img_ctl_print_png.c  ui_img_ctl_printers_png.c  ui_img_ctl_setting_png.c  ui_img_ctl_top_btn_mid_png.c  ui_img_ctl_top_btn_released_png.c  ui_img_current_png.c  ui_img_dot_png.c  ui_img_e_dec_png.c  ui_img_e_inc_png.c  ui_img_edit_png.c  ui_img_ele_used_png.c  ui_img_extrude_png.c  ui_img_guide_1_png.c  ui_img_guide_2_png.c  ui_img_guide_3_png.c  ui_img_guide_4_png.c  ui_img_guide_5_png.c  ui_img_guide_bg_png.c  ui_img_home_png.c  ui_img_hotbed_png.c  ui_img_humidity_0_png.c  ui_img_humidity_1_png.c  ui_img_humidity_2_png.c  ui_img_humidity_3_png.c  ui_img_humidity_4_png.c  (+62 more)
lib/libpngdec/: PNGdec.h  inflate.h  lib_png_decoder.cpp  png.inl
lv_drivers/display/: fbdev.c
lvgl/: .piopm
lvgl/src/core/: lv_obj.c  lv_refr.c
lvgl/src/draw/: lv_draw_img.c  lv_img_decoder.c
lvgl/src/extra/libs/gif/: lv_gif.c
lvgl/src/extra/widgets/spinner/: lv_spinner.c
lvgl/src/font/: lv_symbol_def.h
lvgl/src/misc/: lv_mem.c
lvgl/src/widgets/: lv_dropdown.c
mbedtls-3.4.0/: Makefile  install_manifest.txt
mbedtls-3.4.0/cmake/: MbedTLSTargets.cmake
mbedtls-3.4.0/programs/: Makefile
mbedtls-3.4.0/programs/fuzz/: Makefile
mbedtls-3.4.0/tests/: Makefile
mbedtls/lib/cmake/MbedTLS/: MbedTLSTargets.cmake
tools/generate_img/once/: build_image.py  cmd.txt  combine_file  lv_img_conv.py
tools/generate_img/once/inputfiles/: copy_to_project.txt  font_2024-07-02.img  font_2024-09-12.img  font_2024-10-23.img  烧录指令.txt
tools/generate_img/once/inputfiles/out_imgs/: ui_img_a1_ams_png.c  ui_img_a1_mini_ams_png.c  ui_img_a1_mini_png.c  ui_img_a1_png.c  ui_img_a1_series_png.c  ui_img_account_png.c  ui_img_bigger_png.c  ui_img_btt_logo_png.c  ui_img_close_png.c  ui_img_cloud_disable_png.c  ui_img_cloud_enable_png.c  ui_img_countdown_png.c  ui_img_ctl_ctl_png.c  ui_img_ctl_home_png.c  ui_img_ctl_print_png.c  ui_img_ctl_printers_png.c  ui_img_ctl_setting_png.c  (+73 more)
tools/generate_img/once/out_imgs/: ui_img_a1_ams_png.c  ui_img_a1_mini_ams_png.c  ui_img_a1_mini_png.c  ui_img_a1_png.c  ui_img_a1_series_png.c  ui_img_account_png.c  ui_img_bigger_png.c  ui_img_btt_logo_png.c  ui_img_close_png.c  ui_img_cloud_disable_png.c  ui_img_cloud_enable_png.c  ui_img_countdown_png.c  ui_img_ctl_ctl_png.c  ui_img_ctl_home_png.c  ui_img_ctl_print_png.c  ui_img_ctl_printers_png.c  ui_img_ctl_setting_png.c  ui_img_current_png.c  ui_img_dot_png.c  ui_img_e_dec_png.c  ui_img_e_inc_png.c  ui_img_edit_png.c  ui_img_ele_used_png.c  ui_img_extrude_png.c  ui_img_extruder_png.c  ui_img_guide_1_cn_png.c  ui_img_guide_1_en_png.c  ui_img_guide_2_cn_png.c  ui_img_guide_2_en_png.c  ui_img_guide_3_cn_png.c  ui_img_guide_3_en_png.c  ui_img_guide_4_cn_png.c  ui_img_guide_4_en_png.c  ui_img_guide_5_cn_png.c  ui_img_guide_5_en_png.c  ui_img_guide_bg_png.c  ui_img_home_png.c  ui_img_hotbed_png.c  ui_img_humidity_png.c  ui_img_icon_knob_png.c  (+51 more)
tools/generate_img/once/source_code/: CMakeLists.txt  main.c
tools/image/: image.js  svg_image.js
tools/lv_i18n/: lv_i18n.c  lv_i18n.h  readme.txt
tools/lv_i18n/tool/: package-lock.json  package.json
tools/lv_i18n/translations/: en-GB.yml  zh-cn.yml
